# numerical-analysis-homework

./: CMakeLists.txt  README.md  run.py  レポート厳密解の補充.docx  数値解析レポート.docx
000-Poisson-Rect/: poisson-rect.c  run.sh  test.py
001-Poisson-Param-Region/: poisson-param-region.c
002-Poisson-Sublevelset/: poisson-levelset.c
003-Poisson-Neumann-Rect/: Makefile  poisson-neumann-rect.c
004-Poisson-Neumann-Region/: Makefile  error_fit.csv  fit_error.py  poisson-neumann-region.c  poisson-neumann-region.h  test  test.c
005-Heat-Region/: Makefile  error_N_50.csv  error_all_fit.csv  error_fit.csv  error_fit.xlsx  error_fit_1_all.csv  fit_error.py  fit_error_N_50.py  heat-region.c  test.c
script/: run.py
test/: 004.c  0042.c
